adding basic page structure and design

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>also/and</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>also - and</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Homemade+Apple">
+    <script src="js/main.js"></script>
 </head>
-<body>
-    
+<body></body>
+    <div class="header">
+        <div id="title">also - and</div>
+    </div>
+    <div style="align-content: right;">
+        <div class="blurb">
+            <h2>you know what else</h2>
+            <p>something else too</p>
+        </div>
+    </div>
+    <div class="blurb">
+        <h2>helloooo</h2>
+        <p>thoughts go here</p>
+    </div>
 </body>
 </html>
