first blog post

--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>also - and</title>
+    <title>also / and</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Homemade+Apple">
+  <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Abel">
     <script src="js/main.js"></script>
 </head>
 <body></body>
     <div class="header">
-        <div id="title">also - and</div>
+        <div id="title">also / and</div>
     </div>
     <div style="align-content: right;">
         <div class="blurb">
-            <h2>you know what else</h2>
-            <p>something else too</p>
+            <h2>pre-work week 1</h2>
+            <p>what a week!</p>
+            <p>this week's coursework met my expectations in some ways; where it didn't, it exceeded them.</p>
+            <ul>
+                <li>i expected the instructors to share excellent resources with us. i didn't expect quite so many resources!</li>
+                <li>i expected to spend all of my afternoons stuffing new information into my head. i didn't expect my learning time to stretch well into my evenings (and to feel so motivated to spend that extra time on the course).</li>
+                <li>i expected to learn just a little bit more about web development. i didn't expect to learn a such clear, straightforward approach to managing my local development environment.</li>
+            </ul>
+            <p>my biggest struggle this week has been <i>taking it all in.</i> i tend to read things very thoroughly - i worry that i'll miss something if i just skim. about halfway through the week i realized that i had to speed up to meet the demo deadline, so i started moving faster. i'm nervous about keeping up with the pace in the coming weeks, but i'm up for the challenge.</p>
+            <p>in planning and developing the bare bones of this blog, i've started confronted the knowledge gap between what i know about web development, and what i'd like to know. i guess i was already aware of that gap, and that's why i'm taking this course. i'm excited to begin filling in that gap - maybe especially by learning more about javascript, and making pages interactive and functional.</p>
+            <p>i'm also looking forward to working with my instructors and classmates more, and getting to know everyone better!</p>
         </div>
-    </div>
-    <div class="blurb">
-        <h2>helloooo</h2>
-        <p>thoughts go here</p>
     </div>
 </body>
 </html>
