--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   href="https://fonts.googleapis.com/css?family=Abel">
     <script src="js/main.js"></script>
 </head>
-<body></body>
+<body>
     <div class="header">
         <div id="title">also / and</div>
     </div>
