copy editing first blog post

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>i expected to learn just a little bit more about web development. i didn't expect to learn a such clear, straightforward approach to managing my local development environment.</li>
             </ul>
             <p>my biggest struggle this week has been <i>taking it all in.</i> i tend to read things very thoroughly - i worry that i'll miss something if i just skim. about halfway through the week i realized that i had to speed up to meet the demo deadline, so i started moving faster. i'm nervous about keeping up with the pace in the coming weeks, but i'm up for the challenge.</p>
-            <p>in planning and developing the bare bones of this blog, i've started confronted the knowledge gap between what i know about web development, and what i'd like to know. i guess i was already aware of that gap, and that's why i'm taking this course. i'm excited to begin filling in that gap - maybe especially by learning more about javascript, and making pages interactive and functional.</p>
+            <p>in planning and developing the bare bones of this blog, i've started confronting the gap between what i know about web development, and what i'd like to know. i guess i was already aware of that gap, and that's why i'm taking this course. i'm excited to begin filling in that gap - especially by learning more about javascript, and making websites interactive and functional.</p>
             <p>i'm also looking forward to working with my instructors and classmates more, and getting to know everyone better!</p>
         </div>
     </div>
