fiddling with arrangement

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div style="font-size: 2em; text-align: center; color: #ffffff">becky's blog about awesome inc bootcamp</div>
     </div>
     <div style="width: 95%; padding: 2em;">
-        <div class="blurb">
+        <div class="blurb" style="width: 70%; float: left;">
             <h2>pre-work week 1</h2>
             <p>what a week!</p>
             <p>this week's coursework met my expectations in some ways; where it didn't, it exceeded them.</p>
