--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>also / and</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Homemade+Apple">
-  <link rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Abel">
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Homemade+Apple">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+    <script src="js/main.js" defer></script>
 </head>
+
 <body>
     <div class="header">
         <div id="title">also / and</div>
@@ -22,15 +22,29 @@
             <p>what a week!</p>
             <p>this week's coursework met my expectations in some ways; where it didn't, it exceeded them.</p>
             <ul>
-                <li>i expected the instructors to share excellent resources with us. i didn't expect quite so many resources!</li>
-                <li>i expected to spend all of my afternoons stuffing new information into my head. i didn't expect my learning time to stretch well into my evenings (and to feel so motivated to spend that extra time on the course).</li>
-                <li>i expected to learn just a little bit more about web development. i didn't expect to learn a such clear, straightforward approach to managing my local development environment.</li>
+                <li>i expected the instructors to share excellent resources with us. i didn't expect quite so many
+                    resources!</li>
+                <li>i expected to spend all of my afternoons stuffing new information into my head. i didn't expect my
+                    learning time to stretch well into my evenings (and to feel so motivated to spend that extra time on
+                    the course).</li>
+                <li>i expected to learn just a little bit more about web development. i didn't expect to learn a such
+                    clear, straightforward approach to managing my local development environment.</li>
             </ul>
-            <p>my biggest struggle this week has been <i>taking it all in.</i> i tend to read things very thoroughly - i worry that i'll miss something if i just skim. about halfway through the week i realized that i had to speed up to meet the demo deadline, so i started moving faster. i'm nervous about keeping up with the pace in the coming weeks, but i'm up for the challenge.</p>
-            <p>in planning and developing the bare bones of this blog, i've started confronting the gap between what i know about web development, and what i'd like to know. i guess i was already aware of that gap, and that's why i'm taking this course. i'm excited to begin filling in that gap - especially by learning more about javascript, and making websites interactive and functional.</p>
-            <p>i'm also looking forward to working with my instructors and classmates more, and getting to know everyone better!</p>
+            <p>my biggest struggle this week has been <i>taking it all in.</i> i tend to read things very thoroughly - i
+                worry that i'll miss something if i just skim. about halfway through the week i realized that i had to
+                speed up to meet the demo deadline, so i started moving faster. i'm nervous about keeping up with the
+                pace in the coming weeks, but i'm up for the challenge.</p>
+            <p>in planning and developing the bare bones of this blog, i've started confronting the gap between what i
+                know about web development, and what i'd like to know. i guess i was already aware of that gap, and
+                that's why i'm taking this course. i'm excited to begin filling in that gap - especially by learning
+                more about javascript, and making websites interactive and functional.</p>
+            <p>i'm also looking forward to working with my instructors and classmates more, and getting to know everyone
+                better!</p>
         </div>
-        <div style="margin-left:70%; padding-left: 2em"><img src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" width="100%" alt="seedling"></div>
+        <div style="margin-left:70%; padding-left: 2em"><img
+                src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+                width="100%" alt="seedling"></div>
     </div>
 </body>
+
 </html>
