neatening up html & css based on what i learned this week

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Rebecca Mead">
     <title>also / and</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Homemade+Apple">
@@ -12,12 +13,19 @@
 </head>
 
 <body>
-    <div class="header">
-        <div id="title">also / and</div>
-        <div style="font-size: 2em; text-align: center; color: #ffffff">becky's blog about awesome inc bootcamp</div>
-    </div>
-    <div style="width: 95%; padding: 2em;">
-        <div class="blurb" style="width: 70%; float: left;">
+    <header>
+        <h1>also / and</h1>
+        <nav>
+            <ul>
+                <li><span>blog</span></li></br>
+                <li><a href="#">gallery</a></li></br>
+                <li><a href="#">about</a></li></br>
+            </ul>
+        </nav>
+        <p>becky's blog about awesome inc bootcamp</p>
+    </header>
+    <main>
+        <article>
             <h2>pre-work week 1</h2>
             <p>what a week!</p>
             <p>this week's coursework met my expectations in some ways; where it didn't, it exceeded them.</p>
@@ -40,11 +48,11 @@
                 more about javascript, and making websites interactive and functional.</p>
             <p>i'm also looking forward to working with my instructors and classmates more, and getting to know everyone
                 better!</p>
-        </div>
+        </article>
         <div style="margin-left:70%; padding-left: 2em"><img
                 src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
                 width="100%" alt="seedling"></div>
-    </div>
+    </main>
 </body>
 
 </html>
