--- a/index.html
+++ b/index.html
@@ -25,33 +25,37 @@
         <p>becky's blog about awesome inc bootcamp</p>
     </header>
     <main>
-        <article>
-            <h2>pre-work week 1</h2>
-            <p>what a week!</p>
-            <p>this week's coursework met my expectations in some ways; where it didn't, it exceeded them.</p>
-            <ul>
-                <li>i expected the instructors to share excellent resources with us. i didn't expect quite so many
-                    resources!</li>
-                <li>i expected to spend all of my afternoons stuffing new information into my head. i didn't expect my
-                    learning time to stretch well into my evenings (and to feel so motivated to spend that extra time on
-                    the course).</li>
-                <li>i expected to learn just a little bit more about web development. i didn't expect to learn a such
-                    clear, straightforward approach to managing my local development environment.</li>
-            </ul>
-            <p>my biggest struggle this week has been <i>taking it all in.</i> i tend to read things very thoroughly - i
-                worry that i'll miss something if i just skim. about halfway through the week i realized that i had to
-                speed up to meet the demo deadline, so i started moving faster. i'm nervous about keeping up with the
-                pace in the coming weeks, but i'm up for the challenge.</p>
-            <p>in planning and developing the bare bones of this blog, i've started confronting the gap between what i
-                know about web development, and what i'd like to know. i guess i was already aware of that gap, and
-                that's why i'm taking this course. i'm excited to begin filling in that gap - especially by learning
-                more about javascript, and making websites interactive and functional.</p>
-            <p>i'm also looking forward to working with my instructors and classmates more, and getting to know everyone
-                better!</p>
-        </article>
-        <div style="margin-left:70%; padding-left: 2em"><img
-                src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
-                width="100%" alt="seedling"></div>
+        <div style="padding: 1em;">
+            <article style="width: 70%; float: right;">
+                <h2>pre-work week 2</h2>
+                <p>this week we practiced some intense pseudocoding. i liked it! this exercise was hypothetical - we pseudocoded something we aren't actually going to build - so i took the opportunity to do something fun. i dreamed up a scifi bot (the ensweaterator) that searches for people who are cold, then knits sweaters directly onto their bodies.</p>
+                <p>because this exercise was hypothetical, i had a little fun and made some decisions about my bot that wouldn't be practical or ethical in real life. some of these decisions, like making the bot a drone so that it could knit sweaters in mid-air, were just for fun. others decisions - including that there is no way for a person to give consent to be ensweaterated, and very little regard for the person's safety - are commentary on some people's approaches to developing new technology (approaches that i wholeheartedly oppose in real life).</p>
+                <p>this week i felt a bit better about my timing. at the beginning of the week, i looked ahead and planned out a schedule for the week's assignments, which i managed to stick to.</p>
+                <p>still, there was a lot to do, and at times it was a struggle. this was especially true on wednesday, when it came time to brainstorm and begin the pseudocoding exercise. it took me a while to decide what to pseudocode, and then to wrangle my creative brain into a state of focus and execution. i don't think this was just because my robot was hypothetical; i'm sure the same would be true of a new software idea with open-ended possibilities. i have the impression that some of my classmates struggled with the same thing.</p>
+                <p>finally, this week i learned a lot more about html and css. i've spent some time cleaning up the code for this blog. the layout still needs work, but it felt important to me to clean up the underlying code before messing around with the cosmetics. that's more work for next week - and now that i know a little more, i'm looking forward to it!</p>
+            </article>
+            <div style="margin-right:70%; padding-right: 2em"><img
+                    src="https://images.unsplash.com/photo-1546776310-eef45dd6d63c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=739&q=80"
+                    width="100%" alt="robot"></div>
+        </div>
+        <div style="padding: 1em;">
+            <article style="width: 70%; float: left;">
+                <h2>pre-work week 1</h2>
+                <p>what a week!</p>
+                <p>this week's coursework met my expectations in some ways; where it didn't, it exceeded them.</p>
+                <ul>
+                    <li>i expected the instructors to share excellent resources with us. i didn't expect quite so many resources!</li>
+                    <li>i expected to spend all of my afternoons stuffing new information into my head. i didn't expect my learning time to stretch well into my evenings (and to feel so motivated to spend that extra time on the course).</li>
+                    <li>i expected to learn just a little bit more about web development. i didn't expect to learn such a clear, straightforward approach to managing my local development environment.</li>
+                </ul>
+                <p>my biggest struggle this week has been <i>taking it all in.</i> i tend to read things very thoroughly - i worry that i'll miss something if i just skim. about halfway through the week i realized that i had to speed up to meet the demo deadline, so i started moving faster. i'm nervous about keeping up with the pace in the coming weeks, but i'm up for the challenge.</p>
+                <p>in planning and developing the bare bones of this blog, i've started confronting the gap between what i know about web development, and what i'd like to know. i guess i was already aware of that gap, and that's why i'm taking this course. i'm excited to begin filling in that gap - especially by learning more about javascript, and making websites interactive and functional.</p>
+                <p>i'm also looking forward to working with my instructors and classmates more, and getting to know everyone better!</p>
+            </article>
+            <div style="margin-left:70%; padding-left: 2em"><img
+                    src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+                    width="100%" alt="seedling"></div>
+        </div>
     </main>
 </body>
 
