adding structure for three new pages

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <nav>
             <ul>
                 <li><span>blog</span></li></br>
-                <li><a href="#">gallery</a></li></br>
-                <li><a href="#">about</a></li></br>
+                <li><a href="projects.html">projects</a></li></br>
+                <li><a href="links.html">links</a></li></br>
+                <li><a href="about.html">about</a></li></br>
             </ul>
         </nav>
         <p>becky's blog about awesome inc bootcamp</p>
