nav bar updates

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <p>becky's blog about awesome inc bootcamp</p>
         <nav>
             <ul>
-                <li><a href="#">blog</a></li></br>
-                <li><a href="projects.html">projects</a></li></br>
-                <li><a href="links.html">links</a></li></br>
-                <li><a href="about.html">about</a></li></br>
+                <li><a href="#">blog</a></li>
+                <li><a href="projects.html">projects</a></li>
+                <li><a href="links.html">links</a></li>
+                <li><a href="about.html">about</a></li>
             </ul>
         </nav>
     </header>
