collapsing blog posts foundation

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         </nav>
     </header>
     <main>
-        <article>
+        <button type="button" class="collapsible">
             <h2>pre-work week 2</h2>
+            <img class="thumbnail" src="https://images.unsplash.com/photo-1546776310-eef45dd6d63c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=739&q=80"
+            width="100%" alt="robot">
+        </button>
+        <article class="blog_post">
             <p>this week we practiced some intense pseudocoding. i liked it! this exercise was hypothetical - we
                 pseudocoded something we aren't actually going to build - so i took the opportunity to do something
                 fun. i dreamed up a scifi bot (the ensweaterator) that searches for people who are cold, then knits
@@ -51,10 +55,13 @@
                 code before messing around with the cosmetics. that's more work for next week - and now that i know
                 a little more, i'm looking forward to it!</p>
         </article>
-        <img src="https://images.unsplash.com/photo-1546776310-eef45dd6d63c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=739&q=80"
-            width="100%" alt="robot">
-        <article>
+        <button type="button" class="collapsible">
             <h2>pre-work week 1</h2>
+            <img class="thumbnail"
+                src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+                width="100%" alt="seedling">
+        </button>
+        <article class="blog_post">
             <p>what a week!</p>
             <p>this week's coursework met my expectations in some ways; where it didn't, it exceeded them.</p>
             <ul>
@@ -77,9 +84,6 @@
             <p>i'm also looking forward to working with my instructors and classmates more, and getting to know
                 everyone better!</p>
         </article>
-        <div><img
-                src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
-                width="100%" alt="seedling"></div>
     </main>
 </body>
 
