adding structure for about, links, & projects pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
     <header>
         <h1>also / and</h1>
-        <p>becky's blog about awesome inc bootcamp</p>
         <nav>
             <ul>
                 <li><a href="#">blog</a></li>
@@ -28,8 +27,9 @@
     <main>
         <button type="button" class="collapsible">
             <h2>pre-work week 2</h2>
-            <img class="thumbnail" src="https://images.unsplash.com/photo-1546776310-eef45dd6d63c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=739&q=80"
-            width="100%" alt="robot">
+            <img class="thumbnail"
+                src="https://images.unsplash.com/photo-1546776310-eef45dd6d63c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=739&q=80"
+                width="100%" alt="robot">
         </button>
         <article class="blog_post">
             <p>this week we practiced some intense pseudocoding. i liked it! this exercise was hypothetical - we
