week 3 blog post

--- a/index.html
+++ b/index.html
@@ -26,7 +26,39 @@
     </header>
     <main>
         <button type="button" class="collapsible">
-            <h2>pre-work week 2</h2>
+            <h2>week 3: javascript!</h2>
+            <img class="thumbnail"
+                src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1149&q=80"
+                width="100%" alt="robot">
+        </button>
+        <article class="blog_post">
+            <p>this week we learned more about html and css, then added javascript to complete the beautiful layer
+                cake of programming languages that we'll use for front-end development. i know i still have <em>a
+                    lot</em> to learn about all three, but i'm already excited about what i've been able
+                to do with my blog!</p>
+            <p>this week's updates include:</p>
+            <ul>
+                <li>css code cleanup</li>
+                <li>formatting and color makeover</li>
+                <li>interactive buttons that expand to display blog posts</li>
+                <li>a nav bar, and the base structure for the new pages it points to</li>
+            </ul>
+            <p>there's still more to do, but i feel good about my progress.</p>
+            <p>my future self may laugh at this, but i'll say it: html makes sense to me! i've got lots to learn,
+                but it seems straightforward. however, i need more practice using css to put the html elements where i
+                want them and make them look beautiful. this weekend i'm planning to get some gamified css practice.</p>
+            <p>javascript is making sense to me too. based on the kata practice, i know that i don't always come up
+                with the most elegant, simple solutions for a given problem, but i'm sure i'll learn better methods over
+                time. i'm also moving slow with the syntax - it's pretty different from the languages i have the most
+                experience with - but that will come with time and practice too.</p>
+            <p>i'm enjoying discovering the interplay between these three languages. i like learning about how they've
+                developed over time, how the standards evolve, and how the different browsers handle them. it's neat to
+                learn about best practices for managing their interplay on a website, and the factors that inform
+                developers' decisions.</p>
+            <p>what's next? :)</p>
+        </article>
+        <button type="button" class="collapsible">
+            <h2>week 2: html & css</h2>
             <img class="thumbnail"
                 src="https://images.unsplash.com/photo-1546776310-eef45dd6d63c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=739&q=80"
                 width="100%" alt="robot">
@@ -56,7 +88,7 @@
                 a little more, i'm looking forward to it!</p>
         </article>
         <button type="button" class="collapsible">
-            <h2>pre-work week 1</h2>
+            <h2>week 1: the beginning</h2>
             <img class="thumbnail"
                 src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
                 width="100%" alt="seedling">
