flesh out projects page

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     </header>
     <main>
         <button type="button" class="collapsible">
-            <h2>week 3: javascript!</h2>
+            <p>week 3: javascript!</p>
             <img class="thumbnail"
                 src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1149&q=80"
                 width="100%" alt="robot">
+            <p>9/11/20</p>
         </button>
         <article class="blog_post">
             <p>this week we learned more about html and css, then added javascript to complete the beautiful layer
@@ -58,10 +59,11 @@
             <p>what's next? :)</p>
         </article>
         <button type="button" class="collapsible">
-            <h2>week 2: html & css</h2>
+            <p>week 2: html & css</p>
             <img class="thumbnail"
                 src="https://images.unsplash.com/photo-1546776310-eef45dd6d63c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=739&q=80"
                 width="100%" alt="robot">
+            <p>9/4/20</p>
         </button>
         <article class="blog_post">
             <p>this week we practiced some intense pseudocoding. i liked it! this exercise was hypothetical - we
@@ -88,10 +90,11 @@
                 a little more, i'm looking forward to it!</p>
         </article>
         <button type="button" class="collapsible">
-            <h2>week 1: the beginning</h2>
+            <p>week 1: the beginning</p>
             <img class="thumbnail"
                 src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
                 width="100%" alt="seedling">
+            <p>8/28/20</p>
         </button>
         <article class="blog_post">
             <p>what a week!</p>
