--- a/projects.html
+++ b/projects.html
@@ -17,14 +17,35 @@
         <h1>also / and</h1>
         <nav>
             <ul>
-                <li><a href="index.html">blog</a></li>
-                <li><a href="#">projects</a></li>
-                <li><a href="links.html">links</a></li>
-                <li><a href="about.html">about</a></li>
+                <li><a target="_blank" href="index.html">blog</a></li>
+                <li><a target="_blank" href="#">projects</a></li>
+                <li><a target="_blank" href="links.html">links</a></li>
+                <li><a target="_blank" href="about.html">about</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <a target="_blank" href="https://rlmead.github.io/countdown-timer/">
+            <button class="project">
+                <p>countdown timer</p>
+                <img class="thumbnail" src="./img/countdown.png">
+                <p>september 2020</p>
+            </button>
+        </a>
+        <a target="_blank" href="https://rlmead.github.io/digital-clock/">
+            <button class="project">
+                <p>digital clock</p>
+                <img class="thumbnail" src="./img/clock.png">
+                <p>september 2020</p>
+            </button>
+        </a>
+        <a target="_blank" href="https://github.com/rlmead/pseudocode/blob/master/pseudocode.md">
+            <button class="project">
+                <p>pseudocode</p>
+                <img class="thumbnail" src="./img/pseudocode.png">
+                <p>september 2020</p>
+            </button>
+        </a>
     </main>
 </body>
 
