--- a/links.html
+++ b/links.html
@@ -25,6 +25,26 @@
         </nav>
     </header>
     <main>
+        <a target="_blank" href="https://github.com/rlmead">
+            <button>
+                <img src="img/github.png">
+            </button>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/rebecca-mead-4142621a3/">
+            <button>
+                <img src="img/linkedin.png">
+            </button>
+        </a>
+        <a target="_blank" href="https://www.instagram.com/beckylee620/">
+            <button>
+                <img src="img/instagram.png">
+            </button>
+        </a>
+        <a target="_blank" href="https://www.ravelry.com/people/beckylee620">
+            <button>
+                <img src="img/ravelry.png">
+            </button>
+        </a>
     </main>
 </body>
 
