--- a/index.html
+++ b/index.html
@@ -26,6 +26,42 @@
     </header>
     <main>
         <button type="button" class="collapsible">
+            <p>week 4: MOAR JS</p>
+            <img class="thumbnail"
+                src="https://images.unsplash.com/photo-1518709414768-a88981a4515d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+                width="100%" alt="robot">
+            <p>9/18/20</p>
+        </button>
+        <article class="blog_post">
+            <p>whoa, the pre-work phase is already over! it's been a lot of work learning how to use these new tools,
+                and there's still a lot i haven't fully grasped.</p>
+            <p>i like that the long-term, widespread usage of HTML, CSS, and Javascript has driven development of a
+                powerful variety of capabilities, and that there are active communities developing and improving these
+                tools. on the flip side, this means that there's a huge number of elements, attributes, and functions to
+                learn about, which feels daunting. fortunately, i'm walking a well-worn path, so it seems easy to find
+                documentation and help when necessary.</p>
+            <p>it's cool that these three separate languages developed in tandem for handling these three aspects of web
+                development. i do think it works well, and i've been structuring my workflow around these three aspects:
+            </p>
+            <ol>
+                <li>build the basic HTML structure of the page</li>
+                <li>do a bit of prettifying with CSS</li>
+                <li>plug in all the functionality with Javascript</li>
+            </ol>
+            <p>i think i'll try flipping steps 2 and 3 next time.</p>
+            <p>i wonder what it would be like if one language had developed to handle all these aspects. would it be
+                easier to use, without juggling different syntax? would it even work? does such a language exist?</p>
+            <p>my biggest challenge during pre-work has been wrangling my creative ideas. the ideas i have on top of the
+                MVP have had me spending more time than strictly necessary on a few of the projects. still, that's not
+                such a bad thing, because i enjoy thinking creatively and figuring out how to do stuff.</p>
+            <p>our daily standups were the biggest help during the pre-work phase. it's been great to be able to ask
+                questions every day. reporting on my progress to the group regularly has helped me keep my projects
+                moving.</p>
+            <p>this part-time phase has also been helpful for figuring out what i have the capacity to do, how to
+                prioritize my goals, and how to maintain balance. i hope i can continue to do this going into the
+                full-time phase, although it's clear to me that it's going to be hard!</p>
+        </article>
+        <button type="button" class="collapsible">
             <p>week 3: javascript!</p>
             <img class="thumbnail"
                 src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1149&q=80"
