--- a/index.html
+++ b/index.html
@@ -26,6 +26,36 @@
     </header>
     <main>
         <button type="button" class="collapsible">
+            <p>week 5: full-time!</p>
+            <img class="thumbnail"
+                src="https://images.unsplash.com/photo-1513128034602-7814ccaddd4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80"
+                width="100%" alt="robot">
+            <p>9/25/20</p>
+        </button>
+        <article class="blog_post">
+            <p>we're full-time now!</p>
+            <p>at the start of the week, i was daunted by the idea of learning full-time, and didn't know how to
+                organize my time given the changes to the class structure. my plan was to jump in feet-first with the
+                projects, and try not to spend too much time caught up in the docs.</p>
+            <p>there were pros and cons to this approach. on the plus side, i felt like i had plenty of time to work
+                through my projects. but i also think i moved more slowly in my projects than if i'd spent more
+                time in the docs first. also, i have to catch up with the reading this weekend.</p>
+            <p>this week i also put a damper on my creative mind, focusing primarily on the project descriptions rather
+                than adding on my own silly twists. i did this to ensure i had enough time to meet the week's goals. but
+                one result is that i felt less enthusiastic about this week's projects than i felt about some of the
+                projects we did in prework.</p>
+            <p>now that i have a feel for the workload, i'm planning to go into next week with my creative mind turned
+                back on. i'm also hoping to find a more balanced approach between reading and coding.</p>
+            <p>this week, my underdeveloped pseudocoding and commenting habits held me back most. in pseudocoding, i didn't
+                think through all steps of the projects, and so i wound up doing some things differently or less
+                efficiently than i had originally planned. i think there's a balance to find in pseudocoding specificity
+                as i continue through the course.</p>
+            <p>as for comments: i left most of my notes about my code in my git commit messages rather than inside of the code.
+                that made it hard to explain to other people what my code was doing afterwards (i can't hold all that in
+                memory!!). next week i'm going to try commenting really aggressively.</p>
+                <p>it's still hard for me to juggle all the new things we're learning when planning for a new project, so i'm looking forward to learning more and getting lots more practice in the coming months. regarding JSON data, i'd like to learn about loading in data from open sources. as for bootstrap... i just need to learn about best practices for making functional things look good! ( ՞ਊ՞)</p>
+        </article>
+        <button type="button" class="collapsible">
             <p>week 4: MOAR JS</p>
             <img class="thumbnail"
                 src="https://images.unsplash.com/photo-1518709414768-a88981a4515d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
