--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Rebecca Mead">
     <title>also / and</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Homemade+Apple">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
@@ -46,14 +48,19 @@
                 projects we did in prework.</p>
             <p>now that i have a feel for the workload, i'm planning to go into next week with my creative mind turned
                 back on. i'm also hoping to find a more balanced approach between reading and coding.</p>
-            <p>this week, my underdeveloped pseudocoding and commenting habits held me back most. in pseudocoding, i didn't
+            <p>this week, my underdeveloped pseudocoding and commenting habits held me back most. in pseudocoding, i
+                didn't
                 think through all steps of the projects, and so i wound up doing some things differently or less
                 efficiently than i had originally planned. i think there's a balance to find in pseudocoding specificity
                 as i continue through the course.</p>
-            <p>as for comments: i left most of my notes about my code in my git commit messages rather than inside of the code.
+            <p>as for comments: i left most of my notes about my code in my git commit messages rather than inside of
+                the code.
                 that made it hard to explain to other people what my code was doing afterwards (i can't hold all that in
                 memory!!). next week i'm going to try commenting really aggressively.</p>
-                <p>it's still hard for me to juggle all the new things we're learning when planning for a new project, so i'm looking forward to learning more and getting lots more practice in the coming months. regarding JSON data, i'd like to learn about loading in data from open sources. as for bootstrap... i just need to learn about best practices for making functional things look good! ( ՞ਊ՞)</p>
+            <p>it's still hard for me to juggle all the new things we're learning when planning for a new project, so
+                i'm looking forward to learning more and getting lots more practice in the coming months. regarding JSON
+                data, i'd like to learn about loading in data from open sources. as for bootstrap... i just need to
+                learn about best practices for making functional things look good! ( ՞ਊ՞)</p>
         </article>
         <button type="button" class="collapsible">
             <p>week 4: MOAR JS</p>
@@ -186,6 +193,15 @@
                 everyone better!</p>
         </article>
     </main>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
