--- a/index.html
+++ b/index.html
@@ -15,17 +15,35 @@
 </head>
 
 <body>
-    <header>
-        <h1>also / and</h1>
-        <nav>
-            <ul>
-                <li><a href="#">blog</a></li>
-                <li><a href="projects.html">projects</a></li>
-                <li><a href="links.html">links</a></li>
-                <li><a href="about.html">about</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- header -->
+    <div class="jumbotron text-center mb-0">
+        <h1>also/and</h1>
+    </div>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="mx-auto">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">blog<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="links.html">links</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">about</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <main>
         <button type="button" class="collapsible">
             <p>week 5: full-time!</p>
