--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Homemade+Apple">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
-    <script src="js/main.js" defer></script>
 </head>
 
 <body>
@@ -45,171 +44,6 @@
         </div>
     </nav>
     <main>
-        <button type="button" class="collapsible">
-            <p>week 5: full-time!</p>
-            <img class="thumbnail"
-                src="https://images.unsplash.com/photo-1513128034602-7814ccaddd4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80"
-                width="100%" alt="robot">
-            <p>9/25/20</p>
-        </button>
-        <article class="blog_post">
-            <p>we're full-time now!</p>
-            <p>at the start of the week, i was daunted by the idea of learning full-time, and didn't know how to
-                organize my time given the changes to the class structure. my plan was to jump in feet-first with the
-                projects, and try not to spend too much time caught up in the docs.</p>
-            <p>there were pros and cons to this approach. on the plus side, i felt like i had plenty of time to work
-                through my projects. but i also think i moved more slowly in my projects than if i'd spent more
-                time in the docs first. also, i have to catch up with the reading this weekend.</p>
-            <p>this week i also put a damper on my creative mind, focusing primarily on the project descriptions rather
-                than adding on my own silly twists. i did this to ensure i had enough time to meet the week's goals. but
-                one result is that i felt less enthusiastic about this week's projects than i felt about some of the
-                projects we did in prework.</p>
-            <p>now that i have a feel for the workload, i'm planning to go into next week with my creative mind turned
-                back on. i'm also hoping to find a more balanced approach between reading and coding.</p>
-            <p>this week, my underdeveloped pseudocoding and commenting habits held me back most. in pseudocoding, i
-                didn't
-                think through all steps of the projects, and so i wound up doing some things differently or less
-                efficiently than i had originally planned. i think there's a balance to find in pseudocoding specificity
-                as i continue through the course.</p>
-            <p>as for comments: i left most of my notes about my code in my git commit messages rather than inside of
-                the code.
-                that made it hard to explain to other people what my code was doing afterwards (i can't hold all that in
-                memory!!). next week i'm going to try commenting really aggressively.</p>
-            <p>it's still hard for me to juggle all the new things we're learning when planning for a new project, so
-                i'm looking forward to learning more and getting lots more practice in the coming months. regarding JSON
-                data, i'd like to learn about loading in data from open sources. as for bootstrap... i just need to
-                learn about best practices for making functional things look good! ( ՞ਊ՞)</p>
-        </article>
-        <button type="button" class="collapsible">
-            <p>week 4: MOAR JS</p>
-            <img class="thumbnail"
-                src="https://images.unsplash.com/photo-1518709414768-a88981a4515d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-                width="100%" alt="robot">
-            <p>9/18/20</p>
-        </button>
-        <article class="blog_post">
-            <p>whoa, the pre-work phase is already over! it's been a lot of work learning how to use these new tools,
-                and there's still a lot i haven't fully grasped.</p>
-            <p>i like that the long-term, widespread usage of HTML, CSS, and Javascript has driven development of a
-                powerful variety of capabilities, and that there are active communities developing and improving these
-                tools. on the flip side, this means that there's a huge number of elements, attributes, and functions to
-                learn about, which feels daunting. fortunately, i'm walking a well-worn path, so it seems easy to find
-                documentation and help when necessary.</p>
-            <p>it's cool that these three separate languages developed in tandem for handling these three aspects of web
-                development. i do think it works well, and i've been structuring my workflow around these three aspects:
-            </p>
-            <ol>
-                <li>build the basic HTML structure of the page</li>
-                <li>do a bit of prettifying with CSS</li>
-                <li>plug in all the functionality with Javascript</li>
-            </ol>
-            <p>i think i'll try flipping steps 2 and 3 next time.</p>
-            <p>i wonder what it would be like if one language had developed to handle all these aspects. would it be
-                easier to use, without juggling different syntax? would it even work? does such a language exist?</p>
-            <p>my biggest challenge during pre-work has been wrangling my creative ideas. the ideas i have on top of the
-                MVP have had me spending more time than strictly necessary on a few of the projects. still, that's not
-                such a bad thing, because i enjoy thinking creatively and figuring out how to do stuff.</p>
-            <p>our daily standups were the biggest help during the pre-work phase. it's been great to be able to ask
-                questions every day. reporting on my progress to the group regularly has helped me keep my projects
-                moving.</p>
-            <p>this part-time phase has also been helpful for figuring out what i have the capacity to do, how to
-                prioritize my goals, and how to maintain balance. i hope i can continue to do this going into the
-                full-time phase, although it's clear to me that it's going to be hard!</p>
-        </article>
-        <button type="button" class="collapsible">
-            <p>week 3: javascript!</p>
-            <img class="thumbnail"
-                src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1149&q=80"
-                width="100%" alt="robot">
-            <p>9/11/20</p>
-        </button>
-        <article class="blog_post">
-            <p>this week we learned more about html and css, then added javascript to complete the beautiful layer
-                cake of programming languages that we'll use for front-end development. i know i still have <em>a
-                    lot</em> to learn about all three, but i'm already excited about what i've been able
-                to do with my blog!</p>
-            <p>this week's updates include:</p>
-            <ul>
-                <li>css code cleanup</li>
-                <li>formatting and color makeover</li>
-                <li>interactive buttons that expand to display blog posts</li>
-                <li>a nav bar, and the base structure for the new pages it points to</li>
-            </ul>
-            <p>there's still more to do, but i feel good about my progress.</p>
-            <p>my future self may laugh at this, but i'll say it: html makes sense to me! i've got lots to learn,
-                but it seems straightforward. however, i need more practice using css to put the html elements where i
-                want them and make them look beautiful. this weekend i'm planning to get some gamified css practice.</p>
-            <p>javascript is making sense to me too. based on the kata practice, i know that i don't always come up
-                with the most elegant, simple solutions for a given problem, but i'm sure i'll learn better methods over
-                time. i'm also moving slow with the syntax - it's pretty different from the languages i have the most
-                experience with - but that will come with time and practice too.</p>
-            <p>i'm enjoying discovering the interplay between these three languages. i like learning about how they've
-                developed over time, how the standards evolve, and how the different browsers handle them. it's neat to
-                learn about best practices for managing their interplay on a website, and the factors that inform
-                developers' decisions.</p>
-            <p>what's next? :)</p>
-        </article>
-        <button type="button" class="collapsible">
-            <p>week 2: html & css</p>
-            <img class="thumbnail"
-                src="https://images.unsplash.com/photo-1546776310-eef45dd6d63c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=739&q=80"
-                width="100%" alt="robot">
-            <p>9/4/20</p>
-        </button>
-        <article class="blog_post">
-            <p>this week we practiced some intense pseudocoding. i liked it! this exercise was hypothetical - we
-                pseudocoded something we aren't actually going to build - so i took the opportunity to do something
-                fun. i dreamed up a scifi bot (the ensweaterator) that searches for people who are cold, then knits
-                sweaters directly onto their bodies.</p>
-            <p>because this exercise was hypothetical, i had a little fun and made some decisions about my bot that
-                wouldn't be practical or ethical in real life. some of these decisions, like making the bot a drone
-                so that it could knit sweaters in mid-air, were just for fun. others decisions - including that
-                there is no way for a person to give consent to be ensweaterated, and very little regard for the
-                person's safety - are commentary on some people's approaches to developing new technology
-                (approaches that i wholeheartedly oppose in real life).</p>
-            <p>this week i felt a bit better about my timing. at the beginning of the week, i looked ahead and
-                planned out a schedule for the week's assignments, which i managed to stick to.</p>
-            <p>still, there was a lot to do, and at times it was a struggle. this was especially true on wednesday,
-                when it came time to brainstorm and begin the pseudocoding exercise. it took me a while to decide
-                what to pseudocode, and then to wrangle my creative brain into a state of focus and execution. i
-                don't think this was just because my robot was hypothetical; i'm sure the same would be true of a
-                new software idea with open-ended possibilities. i have the impression that some of my classmates
-                struggled with the same thing.</p>
-            <p>finally, this week i learned a lot more about html and css. i've spent some time cleaning up the code
-                for this blog. the layout still needs work, but it felt important to me to clean up the underlying
-                code before messing around with the cosmetics. that's more work for next week - and now that i know
-                a little more, i'm looking forward to it!</p>
-        </article>
-        <button type="button" class="collapsible">
-            <p>week 1: the beginning</p>
-            <img class="thumbnail"
-                src="https://images.unsplash.com/photo-1518931169559-527a99b4074d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
-                width="100%" alt="seedling">
-            <p>8/28/20</p>
-        </button>
-        <article class="blog_post">
-            <p>what a week!</p>
-            <p>this week's coursework met my expectations in some ways; where it didn't, it exceeded them.</p>
-            <ul>
-                <li>i expected the instructors to share excellent resources with us. i didn't expect quite so many
-                    resources!</li>
-                <li>i expected to spend all of my afternoons stuffing new information into my head. i didn't expect
-                    my learning time to stretch well into my evenings (and to feel so motivated to spend that extra
-                    time on the course).</li>
-                <li>i expected to learn just a little bit more about web development. i didn't expect to learn such
-                    a clear, straightforward approach to managing my local development environment.</li>
-            </ul>
-            <p>my biggest struggle this week has been <i>taking it all in.</i> i tend to read things very thoroughly
-                - i worry that i'll miss something if i just skim. about halfway through the week i realized that i
-                had to speed up to meet the demo deadline, so i started moving faster. i'm nervous about keeping up
-                with the pace in the coming weeks, but i'm up for the challenge.</p>
-            <p>in planning and developing the bare bones of this blog, i've started confronting the gap between what
-                i know about web development, and what i'd like to know. i guess i was already aware of that gap,
-                and that's why i'm taking this course. i'm excited to begin filling in that gap - especially by
-                learning more about javascript, and making websites interactive and functional.</p>
-            <p>i'm also looking forward to working with my instructors and classmates more, and getting to know
-                everyone better!</p>
-        </article>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -220,6 +54,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <script src="js/main.js" defer></script>
+    <script src="js/blog.js" defer></script>
 </body>
 
 </html>
