--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
     <script src="js/main.js" defer></script>
+    <script src="js/about.js" defer></script>
     <script src="js/blog.js" defer></script>
 </body>
 
