--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <script src="js/main.js" defer></script>
     <script src="js/about.js" defer></script>
     <script src="js/blog.js" defer></script>
+    <script src="js/links.js" defer></script>
 </body>
 
 </html>
