--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="js/about.js" defer></script>
     <script src="js/blog.js" defer></script>
     <script src="js/links.js" defer></script>
+    <script src="js/projects.js" defer></script>
 </body>
 
 </html>
