--- a/index.html
+++ b/index.html
@@ -27,23 +27,16 @@
         <div class="mx-auto">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">blog<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="links.html">links</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">about</a>
-                    </li>
+                    <li class="nav-item active">blog</li>
+                    <li class="nav-item">projects</li>
+                    <li class="nav-item">links</li>
+                    <li class="nav-item">about</li>
                 </ul>
             </div>
         </div>
     </nav>
     <main>
+        <!-- container to hold main content -->
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
