--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </nav>
     <main>
         <!-- container to hold main content -->
+        <div id="parent" class="container"></div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -47,11 +48,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script src="js/main.js" defer></script>
     <script src="js/about.js" defer></script>
     <script src="js/blog.js" defer></script>
     <script src="js/links.js" defer></script>
     <script src="js/projects.js" defer></script>
+    <script src="js/main.js" defer></script>
 </body>
 
 </html>
