--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <main>
         <!-- container to hold main content -->
-        <div id="parent" class="container"></div>
+        <div id="parent_container" class="container"></div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
