--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="mx-auto">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">blog</li>
+                    <li class="nav-item">blog</li>
                     <li class="nav-item">projects</li>
                     <li class="nav-item">links</li>
                     <li class="nav-item">about</li>
