initial work toward dynamically populating main page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     </nav>
     <main>
         <!-- container to hold main content -->
-        <div id="parent_container" class="container"></div>
+        <div class="container">
+            <div id="parent_row" class="row">
+            </div>
+        </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
