--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
         <h1>also/and</h1>
     </div>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand navbar-light bg-light mb-3">
         <div class="mx-auto">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
