render functioning projects page

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Homemade+Apple">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
   </head>
-  <body style="background-color: #8BAAAD; font-family: 'Abel', sans-serif;">
+  <body style="background-color: #8BAAAD; font-family: 'Abel', sans-serif; font-size: 1.5em;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
