--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Becky's Blog for Awesome Inc Web Development Bootcamp Fall 2020"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>also / and</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Homemade+Apple">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
-  </head>
-  <body style="background-color: #8BAAAD; font-family: 'Abel', sans-serif; font-size: 1.5em;">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Becky's Blog for Awesome Inc Web Development Bootcamp Fall 2020" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>also / and</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Homemade+Apple">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+</head>
+
+<body style="background-color: #8BAAAD; font-family: 'Abel', sans-serif; font-size: 1.5em;">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/8.0.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
+</body>
+
 </html>
