--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
 </head>
 
-<body style="background-color: #8BAAAD; font-family: 'Abel', sans-serif; font-size: 1.5em;">
+<body style="font-family: 'Abel', sans-serif; font-size: 1.5em;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="/__/firebase/8.0.0/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-  <!-- Initialize Firebase -->
   <script src="/__/firebase/init.js"></script>
 </body>
 
