--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
 </head>
 
-<body style="font-family: 'Abel', sans-serif; font-size: 1.5em; background-color: #D3EDEE">
+<body style="font-family: 'Abel', sans-serif; font-size: 1.5em; background-color: #F0F9F9">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script src="/__/firebase/8.0.0/firebase-app.js"></script>
