--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <title>also / and</title>
 </head>
 
-<body>
+<body style="background-color: #F0F9F9;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script src="/__/firebase/8.0.0/firebase-app.js"></script>
